fix color contrast for soml colors
https://webaim.org/resources/contrastchecker/

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,11 +1,11 @@
 @define-color soml_black rgba(26, 26, 26, 0.8);
-@define-color soml_half rgba(38, 38, 38, 0.8);
-@define-color soml_gray rgba(51, 51, 51, 0.8);
-@define-color soml_red rgba(194, 36, 54, 0.8);
-@define-color soml_green rgba(53, 177, 129, 0.8);
-@define-color soml_yellow rgba(165, 132, 64, 0.8);
-@define-color soml_blue rgba(0, 119, 230, 0.8);
-@define-color soml_orange rgba(230, 77, 0, 0.8);
+@define-color soml_half rgba(40, 40, 40, 0.8);
+@define-color soml_gray rgba(54, 54, 54, 0.8);
+@define-color soml_red rgba(223, 83, 99, 0.8);
+@define-color soml_gold rgba(158, 126, 61, 0.8);
+@define-color soml_orange rgba(235, 78, 0, 0.8);
+@define-color soml_blue rgba(0, 129, 250, 0.8);
+@define-color soml_green rgba(45, 149, 109, 0.8);
 @define-color soml_white rgba(230, 230, 230, 0.8);
 
 * {
@@ -95,11 +95,11 @@
 #battery.warning:not(.plugged),
 #memory.warning,
 #network.linked {
-  background-color: @soml_yellow;
+  background-color: @soml_gold;
   border-image-source: linear-gradient(
     to right,
     @soml_half,
-    @soml_yellow,
+    @soml_gold,
     @soml_half
   );
 }
